fixed letter spacing on littlerecstext a

--- a/personal.css
+++ b/personal.css
@@ -91,6 +91,7 @@ a:hover {
   font-family: "Lato" "Arial" sans-serif;
   color: white;
   text-decoration: none;
+  letter-spacing: 0px;
   border-bottom: 2px solid #E6A9EC;
 }
 .littlerecstext a:hover {
